Docker: remove obsolete JVM options for Java 11 compatibility
Previously we used the following Java 8 JVM options:

-XX:+UnlockExperimentalVMOptions
-XX:+UseCGroupMemoryLimitForHeap
-XshowSettings:vm
-XX:+UseSerialGC

for instance to limit container resources via cgroups. Some of
them do not work any longer with Java 11 as they are
unrecognized options.
Others like the GC were replaced with modern implementations.